--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,13 +9,13 @@
   </head>
   <body>
     <div id="root"></div>
-    <script>
+    <!-- <script>
       if ("serviceWorker" in navigator) {
         window.addEventListener("load", () => {
           navigator.serviceWorker.register("service-worker.ts");
         });
       }
-    </script>
+    </script> -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
