--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/dogLogo.png" />
-    <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, minimum-scale=1.0, maximum-scale=1, user-scalable=no"
+    />
     <title>42PAW</title>
   </head>
   <body>
