--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/dogLogo.png" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/paw.png" />
     <meta
       name="viewport"
       content="width=device-width, minimum-scale=1.0, maximum-scale=1, user-scalable=no"
     />
-    <title>42PAW</title>
+    <title>42Paw</title>
   </head>
   <body>
     <div id="root"></div>
