--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,10 +7,25 @@
       name="viewport"
       content="width=device-width, minimum-scale=1.0, maximum-scale=1, user-scalable=no"
     />
+    <link rel="manifest" href="./public/manifest.json" />
     <title>42Paw</title>
   </head>
   <body>
     <div id="root"></div>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("/serviceWorker.js")
+          .then((registration) => {
+            console.log("Service worker registration succeeded:", registration);
+          })
+          .catch((err) => {
+            console.log("Service worker registration failed:", error);
+          });
+      } else {
+        console.log("Service workers are not supported.");
+      }
+    </script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
