--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
-    <link rel="manifest" href="./public/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <title>42Paw</title>
   </head>
   <body>
