[FE] FEAT: board,comment followtype 추가 및 manifest 수정

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/paw.png" />
+    <link rel="icon" type="image/svg+xml+png" href="/assets/paw.png" />
     <meta
       name="viewport"
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta property="og:url" content="https://42paw.com" />
+    <meta property="og:title" content="42PAW" />
+    <meta property="og:description" content="42PAW. Pets Are the World!" />
     <link rel="manifest" href="manifest.json" />
-    <title>42Paw</title>
+    <title>42PAW</title>
   </head>
   <body>
     <div id="root"></div>
