--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://42paw.com" />
     <meta property="og:title" content="42PAW" />
     <meta property="og:description" content="42PAW. Pets Are the World!" />
