[FE] FIX: upload 후 mainPage 새로고침 안되는 현상 fix

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,7 @@
       name="viewport"
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
+    <meta name="theme-color" content="#c1c2e1f9" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://42paw.com" />
     <meta property="og:title" content="42PAW" />
@@ -16,7 +17,7 @@
   </head>
   <body>
     <div id="root"></div>
-    <script>
+    <!-- <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker
           .register("/serviceWorker.js")
@@ -29,7 +30,7 @@
       } else {
         console.log("Service workers are not supported.");
       }
-    </script>
+    </script> -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
