[FE] FEAT: 알림 스레드 기능 구현

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,8 @@
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
     />
     <meta name="theme-color" content="#c1c2e1f9" />
+    <meta name="description" content="42PAW. Pets Are the World!" />
+    <meta name="keywords" content="42PAW, 42Seoul, Pets, Paw" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://42paw.com" />
     <meta property="og:title" content="42PAW" />
