[FE] FEAT: Google Analytics 스크립트 추가

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,19 @@
     <meta property="og:description" content="42PAW. Pets Are the World!" />
     <link rel="manifest" href="manifest.json" />
     <title>42PAW</title>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-6BBCYNSJYG"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-6BBCYNSJYG");
+    </script>
   </head>
   <body>
     <div id="root"></div>
